--- a/app/views/containers/show.html.erb
+++ b/app/views/containers/show.html.erb
@@ -12,11 +12,11 @@
               <td><%= @container.in_fog.name %></td>
             </tr>
             <tr>
-              <td><%= _('Image') %></td>
-              <td><%= @container.image.image_id %> </td>
+              <td><%= _('Image Repository') %></td>
+              <td><%= @container.repository.name %> </td>
             </tr>
             <tr>
-              <td><%= _('Tag') %></td>
+              <td><%= _('Image Tag') %></td>
               <td><%= @container.tag.tag %> </td>
             </tr>
             <tr>
