--- a/app/views/containers/steps/image.html.erb
+++ b/app/views/containers/steps/image.html.erb
@@ -24,11 +24,11 @@
           </div>
           <div>
             <div class="form-group col-md-6">
-              <%= label_tag "image[search]", _('Search'), :class=>"col-sm-2 control-label" %>
+              <%= label_tag "repository[search]", _('Search'), :class=>"col-sm-2 control-label" %>
               <div class="input-group">
-                <%= auto_complete_search('image[image_id]', '',
-                                         :'data-url'  => auto_complete_image_container_path(@container),
-                                         :value       => f.object.image.present? ? f.object.image.image_id : '',
+                <%= auto_complete_search('repository[name]', '',
+                                         :'data-url'  => auto_complete_repository_container_path(@container),
+                                         :value       => f.object.repository.present? ? f.object.repository.name : '',
                                          :id          => :search,
                                          :focus_on_load => true,
                                          :placeholder => _('Find your favorite container, e.g: centos')) %>
@@ -36,9 +36,9 @@
                 <span class="input-group-btn">
                   <%= button_tag(:class      => 'btn btn-default',
                                  :type       => 'button',
-                                 :id         => 'search_image',
-                                 :'data-url' => search_image_container_path(@container),
-                                 :onclick    => 'searchImage(this)') do %>
+                                 :id         => 'search_repository',
+                                 :'data-url' => search_repository_container_path(@container),
+                                 :onclick    => 'searchRepo(this)') do %>
                     <span class="glyphicon glyphicon-search"></span>
                   <% end %>
                 </span>
@@ -47,14 +47,14 @@
             <%= text_f f, :tag,
                           :value      => f.object.tag.present? ? f.object.tag.tag : '',
                           :id         => 'tag',
-                          :'data-url' => auto_complete_image_tags_container_path(@container) %>
+                          :'data-url' => auto_complete_repository_tags_container_path(@container) %>
             <div class="col-md-12">
               <div id='searching_spinner' class='col-md-offset-3 hide'>
                 <span id='waiting_text'>
                 </span>
-                <%= image_tag('/assets/spinner.gif', :id => 'loading_images_indicator') %>
+                <%= image_tag('/assets/spinner.gif', :id => 'loading_repositories_indicator') %>
               </div>
-              <div id='image_search_results'>
+              <div id='repository_search_results'>
               </div>
             </div>
           </div>
