Fixes #8632 - Move docker tables out of foreman-docker

--- a/app/views/containers/show.html.erb
+++ b/app/views/containers/show.html.erb
@@ -12,12 +12,12 @@
               <td><%= @container.in_fog.name %></td>
             </tr>
             <tr>
-              <td><%= _('Image') %></td>
-              <td><%= @container.image.image_id %> </td>
+              <td><%= _('Image Repository') %></td>
+              <td><%= @container.repository_name %> </td>
             </tr>
             <tr>
-              <td><%= _('Tag') %></td>
-              <td><%= @container.tag.tag %> </td>
+              <td><%= _('Image Tag') %></td>
+              <td><%= @container.tag %> </td>
             </tr>
             <tr>
               <td><%= _('IP Address') %></td>
